...
                android:layout_marginBottom="50dp"
                android:background="@color/colorPrimary"
                android:entries="@array/Spinner_items"
                tools:targetApi="o" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_adresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/type_bien"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="24dp"
                android:textAlignment="center"
...
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_adresse"
                android:layout_marginHorizontal="16dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_codepostal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    app:counterEnabled="true"
                    app:counterMaxLength="5"
                    app:endIconMode="clear_text"
...
                    android:layout_centerHorizontal="true"

                    android:text="@string/price" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_prix"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="26dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="9"
                    app:endIconMode="clear_text"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Surface" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_surface"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="26dp"
                    app:counterEnabled="true"
...
                    android:layout_centerHorizontal="true"
                    android:text="pieces"

                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_piece"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="2"
...
                    android:layout_marginBottom="16dp"
                    android:text="chambres"

                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_chambre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:counterEnabled="true"
                    app:counterMaxLength="2"
                    app:errorEnabled="true"
                    app:mtf_backgroundColor="#bedac3"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/sdb" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_sdb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:counterEnabled="true"
                    app:counterMaxLength="2"
                    app:errorEnabled="true"
                    app:mtf_backgroundColor="#bedac3"
...
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/proximity"
                android:textColor="#000000" />

            <HorizontalScrollView
                android:id="@+id/relativeCBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_proximité"
                android:fillViewport="true"
                android:measureAllChildren="false"
                android:scrollbars="none">
...
                        android:theme="@style/Theme.MaterialComponents.DayNight"
                        app:chipBackgroundColor="@color/colorPrimary"

                        app:chipCornerRadius="24dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/check_magasin"
                        style="@style/Widget.MaterialComponents.Chip.Entry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_toRightOf="@+id/check_ecole"
                        android:text="@string/magasins"
...
